--- a/mean-homework/week4/longboard-crud-app/client/templates/home.html
+++ b/mean-homework/week4/longboard-crud-app/client/templates/home.html
@@ -1,54 +1,102 @@
 ---
 name: home
 url: /
-animationIn: zoomIn
 ---
-
-<h1>Task Manager</h1>
 <div ng-controller="MainController as main">
+    <div class='grid-block align-right'>
+        <a zf-open="createLongboardModal" class="button">Create</a>
+    </div>
+    <div zf-modal="" class='large' id="createLongboardModal" class='collapse'>
+         <a zf-close="createLongboardModal" class="close-button" ng-click="main.createLongboard()">×</a>
+         <form>
+            <div class="grid-block vertical">
+                <div class="grid-content">
+                    <label>
+                        Name
+                        <input type="text" ng-model="main.longboardCreate.name" placeholder=""/>
+                    </label>
+                    <label>
+                        Brand
+                        <input type="text" ng-model="main.longboardCreate.brand" placeholder=""/>
+                    </label>
+                    <label>
+                        Length
+                        <input type="text" ng-model="main.longboardCreate.length" placeholder=""/>
+                    </label>
+                    <label>
+                        Style
+                        <input type="text" ng-model="main.longboardCreate.style" placeholder=""/>
+                    </label>
+                    <label>
+                        Price
+                        <input type="text" ng-model="main.longboardCreate.price" placeholder=""/>
+                    </label>
+                    <select ng-model="main.createLongboardImage" ng-options="longboardImage.brandName for longboardImage in main.longboardImages">
+                        <option>Choose a brand longboard image</option>
+                    </select>
+                </div><!--End Grid Content-->
+                <div class='grid-block'>
+                    <img ng-src = "{{main.createLongboardImage.bottomImage}}" class='grid-container'>
+                    <img ng-src = "{{main.createLongboardImage.topImage}}" class='grid-container'>
+                 </div>
+            </div><!--End Grid Block-->
+         </form><!--End Form-->
+    </div><!-- End Create Longboard Modal -->
+    <div class="grid-block align-center">
+        <h1 class='grid-container'>Hillyard Longboard Shop</h1>
+    </div>
     <div class="grid-block align-center small-up-1 medium-up-3 large-up-6">
         <div class="vertical grid-block" ng-repeat="longboard in main.longboards">
-            <div class="grid-content">
-                <img class="img-thumbnail" src="{{longboard.bottom_img_url}}" />
-            </div>
-            <div class="grid-content">
-                <ul>
-                    <li>Name : {{longboard.name}}</li>
-                    <li> Length: {{longboard.length}}</li>
-                    <li>Style : {{longboard.style}}</li>
-                    <li>Price : {{longboard.price | currency}}</li>
-                </ul>
-            </div>
-                <div class="grid-container">
-                    <a zf-open="{{ 'longboardModal' + $index }}" class="button small-5 medium-5 large-5">Edit</a>
+            <div class="grid-container">
+                <div class="grid-content">
+                    <img class="img-thumbnail" src="{{longboard.bottom_img_url}}" />
+                </div>
+                <div class="grid-content">
+                    <ul>
+                        <li>Name : {{longboard.name}}</li>
+                        <li>Brand : {{longboard.brand}}</li>
+                        <li> Length: {{longboard.length}}</li>
+                        <li>Style : {{longboard.style}}</li>
+                        <li>Price : {{longboard.price | currency}}</li>
+                    </ul>
+                </div>
+                <div class="grid-content">
+                    <a zf-open="{{ 'updateLongboardModal' + $index }}" class="button small-5 medium-5 large-5">Edit</a>
                     <a  class="button small-5 medium-5 large-5" ng-click="main.deleteLongboard($index)">Delete</a>
                 </div>
-            <div zf-modal="" class='large' id="{{ 'longboardModal' + $index }}">
-                 <a zf-close="{{ 'longboardModal' + $index }}" class="close-button" ng-click="main.updateLongboard(longboard)">×</a>
-                 <form>
-                    <div class="vertical grid-block">
-                        <div class="grid-content">
-                            <label>
-                                Name
-                                <input type="text" ng-model="longboard.name" placeholder="{{ longboard.name }}"/>
-                            </label>
-                            <label>
-                                Length
-                                <input type="text" ng-model="longboard.length" placeholder="{{ longboard.length }}"/>
-                            </label>
-                            <label>
-                                Style
-                                <input type="text" ng-model="longboard.style" placeholder="{{ longboard.style }}"/>
-                            </label>
-                            <label>
-                                Price
-                                <input type="text" ng-model="longboard.price" placeholder="{{ longboard.price | currency }}"/>
-                            </label>
-                        </div><!--End Grid Content-->
-                    </div><!--End Grid Block-->
-                 </form><!--End Form-->
-            </div><!--End Modal-->
-        </div>
-    </div>
-    
-</div>
+                <div zf-modal="" class='large' id="{{ 'updateLongboardModal' + $index }}">
+                     <a zf-close="{{ 'updateLongboardModal' + $index }}" class="close-button" ng-click="main.updateLongboard($index)">×</a>
+                     <form>
+                        <div class="vertical grid-block">
+                            <div class="grid-content">
+                                <label>
+                                    Name
+                                    <input type="text" ng-model="updateLongboard.name" placeholder="{{ longboard.name }}"/>
+                                </label>
+                                <label>
+                                    Brand
+                                    <input type="text" ng-model="updateLongboard.brand" placeholder="{{ longboard.brand }}"/>
+                                </label>
+                                <label>
+                                    Length
+                                    <input type="text" ng-model="updateLongboard.length" placeholder="{{ longboard.length }}"/>
+                                </label>
+                                <label>
+                                    Style
+                                    <input type="text" ng-model="updateLongboard.style" placeholder="{{ longboard.style }}"/>
+                                </label>
+                                <label>
+                                    Price
+                                    <input type="text" ng-model="updateLongboard.price" placeholder="{{ longboard.price }}"/>
+                                </label>
+                            </div><!--End Grid Content-->
+                        </div><!--End Grid Block-->
+                     </form><!--End Form-->
+                </div><!--End Longboard Update Modal-->
+            </div><!--End Grid Container-->
+        </div><!--End Longboard Grid Block Card -->
+    </div><!-- End Longboard Grid -->
+<!--     <div class="grid-block">
+        {{main.longboardImages}}
+    </div> -->
+</div><!-- End Main Controller Scope -->
